// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/users/_id/ltcsSubsidies/new.vue should be rendered correctly 1`] = `
<div
  breadcrumbs="[object Object],[object Object],[object Object]"
  class="z-page-stub"
  compact="compact"
>
  <div
    class="z-page-stub-slot-tabs"
  />
  <div
    class="z-page-stub-slot-title"
  />
  <form
    class="v-form"
    data-form=""
    novalidate="novalidate"
  >
    <div>
      <z-user-summary-stub
        user="[object Object]"
      />
      <div
        class="z-form-card-stub"
        title="基本情報"
      >
        <div
          class="z-form-card-stub-slot-actions"
        />
        <z-form-card-item-set-stub
          icon="M9,10H7V12H9V10M13,10H11V12H13V10M17,10H15V12H17V10M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M19,19H5V8H19V19Z"
          label=""
        >
          <z-flex-stub>
            <div
              class="root"
              data-period-start=""
              data-z-form-card-item=""
            >
              <div
                class="z-date-field"
              >
                <div
                  class="v-input v-input--is-readonly v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                      style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend
                          style="width: 0px;"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-text-field__slot"
                      >
                        <label
                          class="v-label theme--light"
                          style="left: 0px; position: absolute;"
                        >
                          適用期間 *
                        </label>
                        <input
                          readonly="readonly"
                          type="text"
                        />
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <transition-group-stub
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <v-dialog-stub
                  closedelay="0"
                  contentclass=""
                  data-z-date-field-dialog=""
                  opendelay="0"
                  origin="center center"
                  retainfocus="true"
                  transition="dialog-transition"
                  width="290px"
                >
                  <v-date-picker-stub
                    data-z-date-field-picker=""
                    dayformat="[Function]"
                    eventcolor="warning"
                    firstdayofweek="1"
                    headerdateformat="[Function]"
                    locale="ja-JP"
                    localefirstdayofyear="0"
                    max="2028-05-17"
                    min="1920-01-01"
                    nexticon="$next"
                    nextmontharialabel="$vuetify.datePicker.nextMonthAriaLabel"
                    nextyeararialabel="$vuetify.datePicker.nextYearAriaLabel"
                    notitle="true"
                    previcon="$prev"
                    prevmontharialabel="$vuetify.datePicker.prevMonthAriaLabel"
                    prevyeararialabel="$vuetify.datePicker.prevYearAriaLabel"
                    selecteditemstext="$vuetify.datePicker.itemsSelected"
                    showcurrent="true"
                    titledateformat="[Function]"
                    type="date"
                    width="290"
                    yearformat="[Function]"
                  >
                    <v-spacer-stub
                      tag="div"
                    />
                    <a
                      class="v-btn-stub"
                      color="primary"
                      data-z-date-field-button-clear=""
                      text=""
                    >
                      クリア
                    </a>
                    <a
                      class="v-btn-stub"
                      color="primary"
                      data-z-date-field-button-cancel=""
                      text=""
                    >
                      キャンセル
                    </a>
                  </v-date-picker-stub>
                </v-dialog-stub>
              </div>
            </div>
            <z-flex-shrink-stub
              class="pb-2 pl-2 pt-4"
            >
              〜
            </z-flex-shrink-stub>
            <div
              class="root"
              data-period-end=""
              data-z-form-card-item=""
            >
              <div
                class="z-date-field"
              >
                <div
                  class="v-input v-input--is-readonly v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                      style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend
                          style="width: 0px;"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-text-field__slot"
                      >
                        <input
                          readonly="readonly"
                          type="text"
                        />
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <transition-group-stub
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <v-dialog-stub
                  closedelay="0"
                  contentclass=""
                  data-z-date-field-dialog=""
                  opendelay="0"
                  origin="center center"
                  retainfocus="true"
                  transition="dialog-transition"
                  width="290px"
                >
                  <v-date-picker-stub
                    data-z-date-field-picker=""
                    dayformat="[Function]"
                    eventcolor="warning"
                    firstdayofweek="1"
                    headerdateformat="[Function]"
                    locale="ja-JP"
                    localefirstdayofyear="0"
                    max="2028-05-17"
                    min="1920-01-01"
                    nexticon="$next"
                    nextmontharialabel="$vuetify.datePicker.nextMonthAriaLabel"
                    nextyeararialabel="$vuetify.datePicker.nextYearAriaLabel"
                    notitle="true"
                    previcon="$prev"
                    prevmontharialabel="$vuetify.datePicker.prevMonthAriaLabel"
                    prevyeararialabel="$vuetify.datePicker.prevYearAriaLabel"
                    selecteditemstext="$vuetify.datePicker.itemsSelected"
                    showcurrent="true"
                    titledateformat="[Function]"
                    type="date"
                    width="290"
                    yearformat="[Function]"
                  >
                    <v-spacer-stub
                      tag="div"
                    />
                    <a
                      class="v-btn-stub"
                      color="primary"
                      data-z-date-field-button-clear=""
                      text=""
                    >
                      クリア
                    </a>
                    <a
                      class="v-btn-stub"
                      color="primary"
                      data-z-date-field-button-cancel=""
                      text=""
                    >
                      キャンセル
                    </a>
                  </v-date-picker-stub>
                </v-dialog-stub>
              </div>
            </div>
          </z-flex-stub>
        </z-form-card-item-set-stub>
        <z-form-card-item-set-stub
          icon="M20,10H4V4H20M20,15H4V13H20M20,2H4C2.89,2 2,2.89 2,4V15C2,16.11 2.89,17 4,17H8V22L12,20L16,22V17H20C21.11,17 22,16.11 22,15V4C22,2.89 21.11,2 20,2Z"
          label=""
        >
          <div
            class="root"
            data-defrayer-category=""
            data-z-form-card-item=""
          >
            <div
              class="v-input v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined v-select"
            >
              <div
                class="v-input__control"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  class="v-input__slot"
                  role="button"
                  style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                >
                  <fieldset
                    aria-hidden="true"
                  >
                    <legend
                      style="width: 0px;"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                  <div
                    class="v-select__slot"
                  >
                    <label
                      class="v-label theme--light"
                      style="left: 0px; position: absolute;"
                    >
                      公費制度（法別番号） 
                    </label>
                    <div
                      class="v-select__selections"
                    >
                      <input
                        aria-readonly="false"
                        autocomplete="off"
                        readonly="readonly"
                        type="text"
                      />
                    </div>
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--append"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon notranslate mdi mdi-menu-down theme--light"
                        />
                      </div>
                    </div>
                    <input
                      type="hidden"
                    />
                  </div>
                  <div
                    class="v-menu"
                  >
                    <!---->
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <transition-group-stub
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </z-form-card-item-set-stub>
        <z-form-card-item-set-stub
          icon="M15,23H13V21H15V23M19,21H17V23H19V21M15,17H13V19H15V17M7,21H5V23H7V21M7,17H5V19H7V17M19,17H17V19H19V17M15,13H13V15H15V13M19,13H17V15H19V13M21,9A2,2 0 0,1 23,11V23H21V11H11V23H9V15H3V23H1V15A2,2 0 0,1 3,13H9V11A2,2 0 0,1 11,9V7A2,2 0 0,1 13,5H15V1H17V5H19A2,2 0 0,1 21,7V9M19,9V7H13V9H19Z"
          label=""
        >
          <div
            class="root"
            data-defrayer-number=""
            data-z-form-card-item=""
          >
            <div
              class="v-input v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                  style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                >
                  <fieldset
                    aria-hidden="true"
                  >
                    <legend
                      style="width: 0px;"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                  <div
                    class="v-text-field__slot"
                  >
                    <label
                      class="v-label theme--light"
                      style="left: 0px; position: absolute;"
                    >
                      負担者番号 *
                    </label>
                    <input
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <transition-group-stub
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </z-form-card-item-set-stub>
        <z-form-card-item-set-stub
          icon="M2,6H4V18H2V6M5,6H6V18H5V6M7,6H10V18H7V6M11,6H12V18H11V6M14,6H16V18H14V6M17,6H20V18H17V6M21,6H22V18H21V6Z"
          label=""
        >
          <div
            class="root"
            data-recipient-number=""
            data-z-form-card-item=""
          >
            <div
              class="v-input v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                  style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                >
                  <fieldset
                    aria-hidden="true"
                  >
                    <legend
                      style="width: 0px;"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                  <div
                    class="v-text-field__slot"
                  >
                    <label
                      class="v-label theme--light"
                      style="left: 0px; position: absolute;"
                    >
                      受給者番号 *
                    </label>
                    <input
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <transition-group-stub
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </z-form-card-item-set-stub>
        <z-form-card-item-set-stub
          icon="M11,2V22C5.9,21.5 2,17.2 2,12C2,6.8 5.9,2.5 11,2M13,2V11H22C21.5,6.2 17.8,2.5 13,2M13,13V22C17.7,21.5 21.5,17.8 22,13H13Z"
          label=""
        >
          <div
            class="root"
            data-benefit-rate=""
            data-z-form-card-item=""
          >
            <div
              class="v-input v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                  style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                >
                  <fieldset
                    aria-hidden="true"
                  >
                    <legend
                      style="width: 0px;"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                  <div
                    class="v-text-field__slot"
                  >
                    <label
                      class="v-label theme--light"
                      style="left: 0px; position: absolute;"
                    >
                      給付率 *
                    </label>
                    <input
                      type="text"
                    />
                    <div
                      class="v-text-field__suffix"
                    >
                      %
                    </div>
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <transition-group-stub
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </z-form-card-item-set-stub>
        <z-form-card-item-set-stub
          icon="M13.92 11H18V13H13V15H18V17H13V21H11V17H6V15H11V13H6V11H10.08L5 3H7.37L12 10.29L16.63 3H19L13.92 11Z"
          label=""
        >
          <div
            class="root"
            data-copay=""
            data-z-form-card-item=""
          >
            <div
              class="v-input v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                  style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                >
                  <fieldset
                    aria-hidden="true"
                  >
                    <legend
                      style="width: 0px;"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                  <div
                    class="v-text-field__slot"
                  >
                    <label
                      class="v-label theme--light"
                      style="left: 0px; position: absolute;"
                    >
                      本人負担額 *
                    </label>
                    <input
                      type="text"
                    />
                    <div
                      class="v-text-field__suffix"
                    >
                      円
                    </div>
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <transition-group-stub
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </z-form-card-item-set-stub>
        <div
          class="z-form-card-stub-slot-header"
        />
      </div>
      <z-form-action-button-stub
        icon="M14,13V17H10V13H7L12,8L17,13M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14A6,6 0 0,0 6,20H19A5,5 0 0,0 24,15C24,12.36 21.95,10.22 19.35,10.03Z"
        text="登録"
      />
    </div>
  </form>
</div>
`;

exports[`pages/users/_id/ltcsSubsidies/new.vue submit should display errors when server responses 400 Bad Request (error occurred in "benefitRate") 1`] = `
<div
  class="root"
  data-benefit-rate=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--has-state v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
      >
        <fieldset
          aria-hidden="true"
        >
          <legend
            style="width: 0px;"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="v-text-field__slot"
        >
          <label
            class="v-label theme--light error--text"
            style="left: 0px; position: absolute;"
          >
            給付率 *
          </label>
          <input
            type="text"
          />
          <div
            class="v-text-field__suffix"
          >
            %
          </div>
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light error--text"
          role="alert"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          >
            <div
              class="v-messages__message"
            >
              給付率を入力してください。
            </div>
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pages/users/_id/ltcsSubsidies/new.vue submit should display errors when server responses 400 Bad Request (error occurred in "copay") 1`] = `
<div
  class="root"
  data-copay=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--has-state v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
      >
        <fieldset
          aria-hidden="true"
        >
          <legend
            style="width: 0px;"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="v-text-field__slot"
        >
          <label
            class="v-label theme--light error--text"
            style="left: 0px; position: absolute;"
          >
            本人負担額 *
          </label>
          <input
            type="text"
          />
          <div
            class="v-text-field__suffix"
          >
            円
          </div>
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light error--text"
          role="alert"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          >
            <div
              class="v-messages__message"
            >
              本人負担額を入力してください。
            </div>
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pages/users/_id/ltcsSubsidies/new.vue submit should display errors when server responses 400 Bad Request (error occurred in "defrayerCategory") 1`] = `
<div
  class="root"
  data-defrayer-category=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--has-state v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined v-select error--text"
  >
    <div
      class="v-input__control"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="v-input__slot"
        role="button"
        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
      >
        <fieldset
          aria-hidden="true"
        >
          <legend
            style="width: 0px;"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="v-select__slot"
        >
          <label
            class="v-label theme--light error--text"
            style="left: 0px; position: absolute;"
          >
            公費制度（法別番号） 
          </label>
          <div
            class="v-select__selections"
          >
            <input
              aria-readonly="false"
              autocomplete="off"
              readonly="readonly"
              type="text"
            />
          </div>
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate mdi mdi-menu-down theme--light error--text"
              />
            </div>
          </div>
          <input
            type="hidden"
          />
        </div>
        <div
          class="v-menu"
        >
          <!---->
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light error--text"
          role="alert"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          >
            <div
              class="v-messages__message"
            >
              公費制度（法別番号）を入力してください。
            </div>
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pages/users/_id/ltcsSubsidies/new.vue submit should display errors when server responses 400 Bad Request (error occurred in "defrayerNumber") 1`] = `
<div
  class="root"
  data-defrayer-number=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--has-state v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
      >
        <fieldset
          aria-hidden="true"
        >
          <legend
            style="width: 0px;"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="v-text-field__slot"
        >
          <label
            class="v-label theme--light error--text"
            style="left: 0px; position: absolute;"
          >
            負担者番号 *
          </label>
          <input
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light error--text"
          role="alert"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          >
            <div
              class="v-messages__message"
            >
              負担者番号を入力してください。
            </div>
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pages/users/_id/ltcsSubsidies/new.vue submit should display errors when server responses 400 Bad Request (error occurred in "periodEnd") 1`] = `
<div
  class="root"
  data-period-end=""
  data-z-form-card-item=""
>
  <div
    class="z-date-field"
  >
    <div
      class="v-input v-input--has-state v-input--is-readonly v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
          style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
        >
          <fieldset
            aria-hidden="true"
          >
            <legend
              style="width: 0px;"
            >
              <span
                class="notranslate"
              >
                ​
              </span>
            </legend>
          </fieldset>
          <div
            class="v-text-field__slot"
          >
            <input
              readonly="readonly"
              type="text"
            />
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light error--text"
            role="alert"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            >
              <div
                class="v-messages__message"
              >
                適用期間（終了）を入力してください。
              </div>
            </transition-group-stub>
          </div>
        </div>
      </div>
    </div>
    <v-dialog-stub
      closedelay="0"
      contentclass=""
      data-z-date-field-dialog=""
      opendelay="0"
      origin="center center"
      retainfocus="true"
      transition="dialog-transition"
      width="290px"
    >
      <v-date-picker-stub
        data-z-date-field-picker=""
        dayformat="[Function]"
        eventcolor="warning"
        firstdayofweek="1"
        headerdateformat="[Function]"
        locale="ja-JP"
        localefirstdayofyear="0"
        max="2028-05-17"
        min="1920-01-01"
        nexticon="$next"
        nextmontharialabel="$vuetify.datePicker.nextMonthAriaLabel"
        nextyeararialabel="$vuetify.datePicker.nextYearAriaLabel"
        notitle="true"
        previcon="$prev"
        prevmontharialabel="$vuetify.datePicker.prevMonthAriaLabel"
        prevyeararialabel="$vuetify.datePicker.prevYearAriaLabel"
        selecteditemstext="$vuetify.datePicker.itemsSelected"
        showcurrent="true"
        titledateformat="[Function]"
        type="date"
        width="290"
        yearformat="[Function]"
      >
        <v-spacer-stub
          tag="div"
        />
        <a
          class="v-btn-stub"
          color="primary"
          data-z-date-field-button-clear=""
          text=""
        >
          クリア
        </a>
        <a
          class="v-btn-stub"
          color="primary"
          data-z-date-field-button-cancel=""
          text=""
        >
          キャンセル
        </a>
      </v-date-picker-stub>
    </v-dialog-stub>
  </div>
</div>
`;

exports[`pages/users/_id/ltcsSubsidies/new.vue submit should display errors when server responses 400 Bad Request (error occurred in "periodStart") 1`] = `
<div
  class="root"
  data-period-start=""
  data-z-form-card-item=""
>
  <div
    class="z-date-field"
  >
    <div
      class="v-input v-input--has-state v-input--is-readonly v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
          style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
        >
          <fieldset
            aria-hidden="true"
          >
            <legend
              style="width: 0px;"
            >
              <span
                class="notranslate"
              >
                ​
              </span>
            </legend>
          </fieldset>
          <div
            class="v-text-field__slot"
          >
            <label
              class="v-label theme--light error--text"
              style="left: 0px; position: absolute;"
            >
              適用期間 *
            </label>
            <input
              readonly="readonly"
              type="text"
            />
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light error--text"
            role="alert"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            >
              <div
                class="v-messages__message"
              >
                適用期間（開始）を入力してください。
              </div>
            </transition-group-stub>
          </div>
        </div>
      </div>
    </div>
    <v-dialog-stub
      closedelay="0"
      contentclass=""
      data-z-date-field-dialog=""
      opendelay="0"
      origin="center center"
      retainfocus="true"
      transition="dialog-transition"
      width="290px"
    >
      <v-date-picker-stub
        data-z-date-field-picker=""
        dayformat="[Function]"
        eventcolor="warning"
        firstdayofweek="1"
        headerdateformat="[Function]"
        locale="ja-JP"
        localefirstdayofyear="0"
        max="2028-05-17"
        min="1920-01-01"
        nexticon="$next"
        nextmontharialabel="$vuetify.datePicker.nextMonthAriaLabel"
        nextyeararialabel="$vuetify.datePicker.nextYearAriaLabel"
        notitle="true"
        previcon="$prev"
        prevmontharialabel="$vuetify.datePicker.prevMonthAriaLabel"
        prevyeararialabel="$vuetify.datePicker.prevYearAriaLabel"
        selecteditemstext="$vuetify.datePicker.itemsSelected"
        showcurrent="true"
        titledateformat="[Function]"
        type="date"
        width="290"
        yearformat="[Function]"
      >
        <v-spacer-stub
          tag="div"
        />
        <a
          class="v-btn-stub"
          color="primary"
          data-z-date-field-button-clear=""
          text=""
        >
          クリア
        </a>
        <a
          class="v-btn-stub"
          color="primary"
          data-z-date-field-button-cancel=""
          text=""
        >
          キャンセル
        </a>
      </v-date-picker-stub>
    </v-dialog-stub>
  </div>
</div>
`;

exports[`pages/users/_id/ltcsSubsidies/new.vue submit should display errors when server responses 400 Bad Request (error occurred in "recipientNumber") 1`] = `
<div
  class="root"
  data-recipient-number=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--has-state v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
      >
        <fieldset
          aria-hidden="true"
        >
          <legend
            style="width: 0px;"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="v-text-field__slot"
        >
          <label
            class="v-label theme--light error--text"
            style="left: 0px; position: absolute;"
          >
            受給者番号 *
          </label>
          <input
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light error--text"
          role="alert"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          >
            <div
              class="v-messages__message"
            >
              受給者番号を入力してください。
            </div>
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;
